--- a/todo
+++ b/todo
@@ -1,28 +1,1 @@
-# Change the html to be one page only. 
-
-## Use a form and drop down selects with options. 
-
-## Utilize local storage
-
-## Allow calculation of 1, 7, 14 and 28 days
-
-### Form flow: 
-
-1. Choose how many days to plan for
-2. pick breakfast, lunch and dinner for each
-3. when done, store choices and display total macros, and total price.
-4. Below each day, display macros and price.
-5. Allow to display a shopping list
-6. Pre-select when in storage.
-
-
-
-
-# on your starter package:
-
-- include gitignore
-- Make a storage folder for JS files including JSDocs.
-- Also write unit tests for the same files. 
-- These files will speed up your production later
-- They can be various function that are often used and so on comes handy. 
-- examples are various fetch functions, functions to create elements, storage functions, router etc.
+# the planner is no longer only low-carb
